Fixing horizontal scroll bar at bottom of home page

--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -22,6 +22,7 @@ html, body {
 #root {
     height: 100%;
     overflow-y: auto;
+    overflow-x: hidden;
     background-color: v.$primary-color;
     color: v.$white-color;
 }
